:construction_worker: fixed methode visibility in show

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -188,7 +188,7 @@ $paragraph-margin-bottom: 0;
         margin-block: auto;
     }
 
-    #picture_profile{
+    #picture-profile{
         margin-bottom: -9em;
         margin-right: 25em;
     }
@@ -268,7 +268,7 @@ $paragraph-margin-bottom: 0;
         margin-bottom: 1.5em;
     }
 
-    #picture_profile{
+    #picture-profile{
         margin-bottom: -3em;
     }
 
@@ -338,13 +338,13 @@ $paragraph-margin-bottom: 0;
     text-decoration: none;
 }
 
-#picture_profile {
+#picture-profile {
     width: 79px;
     height: 79px;
     border-radius: 50%;
 }
 
-#introduction img.quote_left {
+#introduction img.quote-left {
     height: 1.5em;
     float: left;
     margin-left: -1.35em;
@@ -352,7 +352,7 @@ $paragraph-margin-bottom: 0;
     font-size: 2em;
 }
 
-#introduction img.quote_right {
+#introduction img.quote-right {
     height: 1.5em;
     float: right;
     margin-right: -1.35em;
